--- a/bna/2019/index.njk
+++ b/bna/2019/index.njk
@@ -6,7 +6,7 @@ year: 2019
 homepage: "https://data-driven.news/bna/2019/"
 ---
 
-<content>
+<div id="content">
     <h1>{{ title }} ({{ coursenum }})</h1>
 
     {% include "bna/" + year + "/course-description.njk" %}
@@ -17,4 +17,4 @@ homepage: "https://data-driven.news/bna/2019/"
     {% include "bna/" + year + "/assignments-and-grading.njk" %}
     {% include "bna/" + year + "/professional-disclosure.njk" %}
     {% include "bna/" + year + "/honor-code.html" %}
-</content>
+</div>
