--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,49 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-    <style>
-    body {
-      font-family: helvetica;
-    }
-    h1 {
-      text-align: center;
-    }
-    #coursedate {
-      text-align: center;
-      font-style: italic;
-    }
-    div#content {
-      width: 63%;
-      margin: 0 auto;
-    }
-    blockquote {
-      background: #f9f9f9;
-      border-left: 10px solid #ccc;
-      margin: 1.5em 10px;
-      padding: 0.5em 10px;
-      quotes: "\201C""\201D""\2018""\2019";
-    }
-    blockquote:before {
-      color: #ccc;
-      font-size: 4em;
-      line-height: 0.1em;
-      margin-right: 0.25em;
-      vertical-align: -0.4em;
-    }
-    blockquote p {
-      display: inline;
-    }
-    code {
-      font-family: Consolas,"courier new";
-      font-size:16px
-    }
-    pre {
-      font-family: Consolas,"courier new";
-      font-size:16px;
-      margin-left: 6%;
-    }
-  </style>
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <title>{{ title }}</title>
   </head>
   <body>
     <div id="content">
