--- a/_includes/layouts/class.njk
+++ b/_includes/layouts/class.njk
@@ -6,6 +6,13 @@ year: 2019
 homepage: "https://data-driven.news/bna/2019/"
 ---
 
-<h1>{{ title }}</h1>
-<div id="coursedate">Day {{ daynum }} ~  {{ coursedate }}</div>
+<header>
+  <h1>{{ title }}</h1>
+  <div id="coursedate">Day {{ daynum }} ~  {{ coursedate }}</div>
+</header>
+
+{{ content | toc | safe }}
+
+<div class="content">
 {{ content | safe }}
+</div>
