Partial work implementing CSS Grid layout

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -7,6 +7,8 @@
     <title>{{ title }}</title>
   </head>
   <body>
+    <div class="grid-container">
     {{ content | safe }}
+    </div>
   </body>
 </html>
