--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,26 @@
+body {
+  font-family: helvetica;
+}
 header {
   grid-area: hd;
+  text-align: center;
+}
+nav {
+  grid-area: nav;
+  overflow: hidden;
+  background-color: #333;
+}
+nav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 40px 16px;
+  text-decoration: none;
+}
+nav a:hover {
+  background-color: #ddd;
+  color: black;
 }
 aside {
   grid-area: aside;
@@ -17,32 +38,44 @@ footer {
 .grid-container {
   display: grid;
   grid-template-columns: repeat(9, 1fr);
-  grid-auto-rows: minmax(100px, auto);
+  grid-auto-rows: minmax(90px, auto);
   grid-template-areas:
     'hd hd hd hd hd hd hd hd hd'
-    'aside aside main main main main main main main'
+    'nav nav nav nav nav nav nav nav nav'
+    'main main main main main main main aside aside'
     'ft ft ft ft ft ft ft ft ft';
   grid-gap: 10px;
-  background-color: #fff; //#2196F3;
+  background-color: #fff;
   padding: 10px;
 }
-body {
-  font-family: helvetica;
+#site {
+  font-size: 30px;
 }
-h1 {
-  text-align: center;
+#coursenum {
+  font-size: 15px;
 }
 #coursedate {
   text-align: center;
   font-style: italic;
+  padding: 5px;
 }
-#logo {
-  font-size: 50px;
-  font-family: "Times New Roman", Times, serif;
+h1 {
+  text-align: center;
+  font-size: 30px;
+  padding: 10px;
+}
+h2 {
+  text-align: center;
+  font-size: 20px;
+}
+h3 {
+  text-align: center;
+  font-size: 15px;
 }
 ol li {
   list-style-type: none;
   color:blue;
+  padding: 5px;
 }
 blockquote {
   background: #f9f9f9;
