--- a/_includes/layouts/base_bna.njk
+++ b/_includes/layouts/base_bna.njk
@@ -5,7 +5,7 @@ homepage: "https://data-driven.news/bna/2019/"
 
 {% block header %}
   <div id="site">{{ coursename }}</div>
-  <div id="coursenum">Comm {{ coursenum }} ({{ year }})</div>
+  <div id="coursenum">COMM {{ coursenum }} ({{ year }})</div>
 {% endblock %}
 
 {% block sitenav %}
