--- a/bna/2019/index.njk
+++ b/bna/2019/index.njk
@@ -1,7 +1,7 @@
 ---
+layout: layouts/base_bna.njk
 title: Syllabus
 ---
-{% extends "layouts/base_bna.njk" %}
 
 {% block content %}
     <h1>{{ title }}</h1>
