--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@ nav a {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 40px 16px;
+  padding: 12px 16px;
   text-decoration: none;
 }
 nav a:hover {
@@ -31,6 +31,7 @@ aside {
 main {
   grid-area: main;
   padding: 10px;
+  overflow: auto;
 }
 footer {
   grid-area: ft;
@@ -38,7 +39,7 @@ footer {
 .grid-container {
   display: grid;
   grid-template-columns: repeat(9, 1fr);
-  grid-auto-rows: minmax(90px, auto);
+  grid-auto-rows: minmax(30px, auto);
   grid-template-areas:
     'hd hd hd hd hd hd hd hd hd'
     'nav nav nav nav nav nav nav nav nav'
@@ -50,6 +51,7 @@ footer {
 }
 #site {
   font-size: 30px;
+  margin-bottom: 10px;
 }
 #coursenum {
   font-size: 15px;
@@ -57,16 +59,16 @@ footer {
 #coursedate {
   text-align: center;
   font-style: italic;
-  padding: 5px;
+  padding-bottom: 30px;
 }
 h1 {
   text-align: center;
   font-size: 30px;
-  padding: 10px;
 }
 h2 {
   text-align: center;
   font-size: 20px;
+  padding-top: 15px;
 }
 h3 {
   text-align: center;
