--- a/css/main.css
+++ b/css/main.css
@@ -8,24 +8,24 @@ header {
 nav {
   grid-area: nav;
   overflow: hidden;
-  background-color: #333;
+  background-color: #4d4f53;
 }
 nav a {
   float: left;
   display: block;
   color: #f2f2f2;
-  text-align: center;
   padding: 12px 16px;
+  text-align: center;
   text-decoration: none;
 }
 nav a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #8c1515;
 }
 aside {
   grid-area: aside;
-  color: white;
-  padding: 10px;
+  padding-left: 10px;
+}
+aside a {
   text-decoration: none;
 }
 main {
@@ -35,7 +35,15 @@ main {
 }
 footer {
   grid-area: ft;
+  background-color: #2e2d29;
+  color: white;
 }
+
+#copyright {
+  padding: 10px;
+  text-align: left;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns: repeat(9, 1fr);
@@ -76,6 +84,7 @@ h3 {
 }
 ol li {
   list-style-type: none;
+  text-decoration: none;
   color:blue;
   padding: 5px;
 }
