Add id to syllabus header

--- a/_includes/bna/2019/course-description.njk
+++ b/_includes/bna/2019/course-description.njk
@@ -1,4 +1,4 @@
-<h2>Course Description</h2>
+<h2 id="course-description">Course Description</h2>
 
 <p>This course introduces students to the process of building interactive web 
 applications and visualizations for the news. Students will study examples from 
