Put copyright in div

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -18,7 +18,7 @@
       </main>
       <footer>
         {% block footer %}
-        &copy; Copyright 2019 by Serdar Tumgoren.
+        <div id="copyright">&copy; Copyright {{ year }} Serdar Tumgoren</div>
         {% endblock %}
       </footer>
     </div>
