--- a/_includes/layouts/base_bna.njk
+++ b/_includes/layouts/base_bna.njk
@@ -10,6 +10,8 @@ homepage: "https://data-driven.news/bna/2019/"
 
 {% block sitenav %}
   <a href="/bna/{{ year }}/">Syllabus</a>
+  <!-- TODO: add index pages
   <a href="/bna/{{ year }}/classnotes/">Class notes</a>
   <a href="/bna/{{ year }}/assignments/">Assignments</a>
+  -->
 {% endblock %}
