--- a/css/main.css
+++ b/css/main.css
@@ -114,4 +114,14 @@ pre {
   font-size:16px;
   margin-left: 6%;
 }
-
+/* Table bits */
+th, td {
+  padding: 3px 13px;
+  text-align: left;
+}
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+th.center, td.center {
+  text-align: center;
+}
