Mucking about with CSS for responsiveness

--- a/_includes/bna/2019/assignments-and-grading.njk
+++ b/_includes/bna/2019/assignments-and-grading.njk
@@ -31,7 +31,7 @@ Please get an early start on assignments -- especially larger projects -- in ord
 to complete them on time. If you run into trouble, I'm happy to help. Give yourself
 some runway to work through unexpected technical challenges and seek out help when necessary.</p>
 
-<h3 id="excused-absences">Excused absences</h3>
+<h3 id="excused-absences">Absences</h3>
 <p>We all get sick and, at times, issues arise at home or in our personal lives that 
 prevent us from completing work or attending class. I try to be 
 understanding and accommodating in such cases <em>as long as you contact me
