--- a/_includes/bna/2019/requirements-and-recs.njk
+++ b/_includes/bna/2019/requirements-and-recs.njk
@@ -34,7 +34,7 @@ you'll need to find a way to gain access to a Mac or Linux machine. The easiest 
 the Macs available in class. Outside of class time, we can discuss alternatives that will
 let you run Linux on a personal Windows machine.</p>
 
-<h3 id="recommended-reading">Reading/Reference</h2>
+<h3 id="recommended-reading">Reading</h2>
 <p>This course has no required textbooks.</p>
 <p>We'll use a mix of free online resources to level up on programming fundamentals and best practices. Print books will be on reserve at <a href="http://library.stanford.edu/libraries/green/about">Green Library</a>.
 <em> This list may be updated over the course of the quarter.</em></p>
