--- a/_includes/layouts/base_bna.njk
+++ b/_includes/layouts/base_bna.njk
@@ -9,9 +9,11 @@ homepage: "https://data-driven.news/bna/2019/"
 {% endblock %}
 
 {% block sitenav %}
-  <a href="/bna/{{ year }}/">Syllabus</a>
-  <a href="/bna/{{ year }}/classnotes/">Class notes</a>
-  <!-- TODO: add index pages
-  <a href="/bna/{{ year }}/assignments/">Assignments</a>
-  -->
+  <ul>
+    <li><a href="/bna/{{ year }}/">Syllabus</a></li>
+    <li><a href="/bna/{{ year }}/classnotes/">Class notes</a></li>
+    <li><!-- TODO: add index pages
+    <li><a href="/bna/{{ year }}/assignments/">Assignments</a></li>
+    -->
+  </ul>
 {% endblock %}
