--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
   font-family: helvetica;
+  font-size: 100%;
 }
 header {
   grid-area: hd;
@@ -7,68 +8,77 @@ header {
 }
 nav {
   grid-area: nav;
-  overflow: hidden;
-  background-color: #4d4f53;
 }
-nav a {
+nav ul {
+  margin: 0;
+  padding: 0;
+  background-color: #4d4f53;
+  list-style-type: none;
+  overflow: hidden;
+}
+nav ul li {
   float: left;
+}
+nav li a {
   display: block;
   color: #f2f2f2;
   padding: 12px 16px;
   text-align: center;
   text-decoration: none;
 }
-nav a:hover {
+nav li a:hover {
   background-color: #8c1515;
+  padding: 12px 16px;
 }
 aside {
   grid-area: aside;
-  padding-left: 10px;
+  font-size: 14px;
+  line-height: 1.25;
 }
 aside a {
   text-decoration: none;
+  border-bottom: 1.5px dotted #000;
+  color: #444;
+}
+aside a:hover {
+  border-bottom-style: solid;
+  border-bottom-color: #8c1515;
 }
 main {
   grid-area: main;
-  padding: 10px;
-  overflow: auto;
   line-height: 1.25;
+  padding: 10px;
 }
 footer {
   grid-area: ft;
-  background-color: #4d4f53;
-  color: white;
-}
-
-#copyright {
-  padding: 10px;
+  color: #444;
   text-align: left;
 }
-
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(9, 1fr);
-  grid-auto-rows: minmax(30px, auto);
+  grid-template-columns: 200px minmax(auto, 700px);
   grid-template-areas:
-    'hd hd hd hd hd hd hd hd hd'
-    'nav nav nav nav nav nav nav nav nav'
-    'main main main main main main main aside aside'
-    'ft ft ft ft ft ft ft ft ft';
+    '. hd'
+    '. nav'
+    'aside main'
+    'ft ft';
   grid-gap: 10px;
   background-color: #fff;
-  padding: 10px;
 }
 #site {
-  font-size: 30px;
   margin-bottom: 10px;
+  font-size: 170%;
 }
 #coursenum {
-  font-size: 15px;
+  //font-size: 15px;
 }
 #coursedate {
   text-align: center;
   font-style: italic;
   padding-bottom: 30px;
+}
+#copyright {
+  padding: 10px;
 }
 h1 {
   text-align: center;
@@ -122,4 +132,55 @@ tr:nth-child(even) {
 }
 th.center, td.center {
   text-align: center;
+}
+
+@media screen and (max-width: 575px) {
+  .grid-container {
+    display: block;
+    font-size: 90%;
+  }
+  header {
+    text-align: left;
+  }
+  /*
+  nav.sitenav {
+    float: none;
+  }
+  nav.sitenav ul {
+    margin: 0;
+    padding: 0;
+    background-color: #4d4f53;
+    list-style-type: none;
+    overflow: hidden;
+  }
+  nav.sitenav a {
+    //background-color: #4d4f53;
+    //color: #f2f2f2;
+    text-align: left;
+    text-decoration: none;
+  }
+  nav.sitenav a:hover {
+    background-color: #8c1515;
+  }
+  */
+  .clearfix {
+    clear: both;
+  }
+  aside {
+    display: none;
+  }
+  #site {
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 140%;
+  }
+  #coursenum {
+    text-align: center;
+    margin-bottom: 10px;
+    font-size: 90%;
+  }
+  #coursedate {
+    text-align: center;
+    font-style: italic;
+  }
 }
