Add 2020 syllabus and day 1 notes

--- a/src/_includes/bna/2020/about.njk
+++ b/src/_includes/bna/2020/about.njk
@@ -2,7 +2,7 @@
 <table>
     <tr>
         <td>Location:</td>
-        <td><a href="http://maps.stanford.edu/ada/building-ada.cfm?FACIL_ID=01-120">McClatchy Hall</a> (Building 120), Room 410</td>
+        <td>Video conference (links posted on Canvas)</td>
     </tr>
     <tr>
         <td>Time:</td>
@@ -10,7 +10,7 @@
     </tr>
     <tr>
         <td>Dates:</td>
-        <td>March 30 - June 6, 2020</td>
+        <td>April 7 - June 6, 2020</td>
     </tr>
     <tr>
         <td>Instructor:</td><td><a href="https://comm.stanford.edu/faculty-tumgoren/">Serdar Tumgoren</a>, <em>Lorry I. Lokey Visiting Professor in Professional Journalism</em></td>
@@ -26,14 +26,14 @@
 <table>
     <tr>
         <td>Time:</td>
-        <td>Wednesdays, 1:30-3:00pm</td>
+        <td>Wednesdays, 9:00-10:00am and by appointment</td>
     </tr>
     </tr>
         <td>Place:</td>
-        <td>Room 342, McClatchy Hall</td>
+        <td>Video conference.</td>
     </tr>
 </table>
-<p>I'm happy to meet during or outside of normally scheduled office hours. Please come by if you have questions about the coursework or generally want to 
-discuss story ideas, data journalism or other topics.
-We can also chat by phone or video when I'm working off-campus (Mondays and Fridays) -- 
-just reach out via email to schedule a time.
+<p>I'm happy to meet during or outside of normally scheduled office hours. 
+Generally, the best time to reach me is on Mon/Wed/Fri mornings, from 9am to noon.
+Please reach out if you have questions about the coursework or generally want to 
+discuss story ideas, data journalism or other topics.</p>
