--- a/src/_includes/bna/2020/course-description.njk
+++ b/src/_includes/bna/2020/course-description.njk
@@ -1,11 +1,6 @@
 <h2 id="course-description">Course Description</h2>
 
-<p>This course introduces students to the process of building interactive web 
-applications and visualizations for the news. Students will study examples from 
-the news industry and gain proficiency in a range of technical languages, 
-skills and tools: version control, HTML, CSS, Javascript, Python, web protocols, 
-and web hosting and deployment.</p>
-
-<p>Class exercises and projects will focus on the use of these technologies to 
-produce applications that tell a story and engage the public. 
-Students must have basic proficiency in Python, SQL and the Unix shell.</p>
+<p>This course introduces students to the technical and workflow skills used by
+news application teams. Students will form into groups to conceive and execute
+a news app or tool, along the way learning and applying best practices for team
+collaboration, goal-setting and project management.</p>
