--- a/src/bna/2020/index.njk
+++ b/src/bna/2020/index.njk
@@ -6,12 +6,64 @@ title: Syllabus
 {% block content %}
     <h1>{{ title }}</h1>
 
-    {% include "bna/" + year + "/course-description.njk" %}
-    {% include "bna/" + year + "/learning-goals.html" %}
+    <h2 id="course-description">Course description</h2>
+
+    <p>This course introduces students to the technical and workflow skills used by
+    news application teams. Students will form into groups to conceive and execute
+    a news project, along the way learning and applying best practices for team
+    collaboration, goal-setting and project management.</p>
+
+    <p>Students will also craft and execute individual learning plans designed
+     to help them develop new technical skills and deepen mastery of existing skills. 
+     These may range from the basics of web development using HTML, CSS and Javascript
+     to more advanced skills such as using D3 and cloud services to create data-driven, 
+     interactive graphics.</p>
+     <p>Whatever the starting point, student learning plans must be aligned with their team's project goals.</p>
+
+    <h2 id="course-format">Course format</h2>
+
+    <p>Our classes will mainly serve as a venue for team planning and collaboration. This will include:</p>
+    <ul>
+      <li>Review of recent work</li>
+      <li>Planning of next steps</li>
+      <li>Pair coding and problem solving</li>
+      <li>Review and alignment of learning goals with project-specific tasks</li>
+      <li>Providing feedback on other team projects</li>
+    </ul>
+
+    <p>We'll also have occassional, brief lectures and discussions on topics related to news apps.</p>
+
+    <h2 id="learning-objectives">Learning objectives</h2>
+
+    <p>The primary goal will be to experience how news app developers work while building a news application, interactive graphics, and/or tools. Throughout the quarter, we'll focus on:</p>
+    <ul>
+      <li>Collaborative workflows and tools</li>
+      <li>Agile software development practices</li>
+      <li>Project planning and management</li>
+      <li>Setting, executing, and reflecting on goals</li>
+    </ul>
+
+    <h2 id="attendance">Attendance</h2>
+    <p>Our classes will mainly provide an opportunity for you to meet with your team and provide end-user feedback to another team. Attendance is important for these reasons, although if you’re in a time zone that makes it difficult to attend, we can discuss alternatives.</p>
+
+    <h2 id="grading-and-assignments">Grading and assignments</h2>
+    <p>This course will be offered on a satisfactory/no credit basis, per university requirements for Spring quarter 2020.</p>
+    <p>Grades will be based on the following criteria:</p>
+    <ul>
+      <li>Individual contributions to the team project, including effective collaboration with teammates, participation in team meetings and “end user” feedback sessions.</li>
+      <li>The development and execution of individual learning plans using SMART goals.</li>
+      <li>Two "reflection" memos (at the half-way point and end of the quarter) on the progress of individual learning goals and the team project.</li>
+    </ul>
+
+    <h2 id="communication">Communication</h2>
+    <p>We'll primarily use Zoom and Slack to communicate this quarter. Please make sure to install
+    the desktop clients for both applications by clicking on their links below and following the instructions.</p>
+    <ul>
+      <li><a href="https://uit.stanford.edu/service/slack#section--get-started">Slack</a> - Join the <em>comm-177t-bna</em> channel in the <a href="https://stanford-r8xo.slack.com/home">StanfordJournalism</a> workspace.
+      <li><a href="https://stanford.zoom.us/download">Zoom</a> - Links to class meetings will be posted in Canvas. Classes will be recorded and available for review.</li>
+    </ul>
+
     {% include "bna/" + year + "/about.njk" %}
-    {% include "bna/" + year + "/requirements-and-recs.njk" %}
-    {% include "bna/" + year + "/structure.njk" %}
-    {% include "bna/" + year + "/assignments-and-grading.njk" %}
     {% include "bna/" + year + "/professional-disclosure.njk" %}
     {% include "bna/" + year + "/honor-code.html" %}
 {% endblock %}
