update course details

--- a/src/_includes/bna/2021/about.njk
+++ b/src/_includes/bna/2021/about.njk
@@ -6,11 +6,11 @@
     </tr>
     <tr>
         <td>Time:</td>
-        <td>M/W 1:00 - 2:20PM</td>
+        <td>Mon/Wed 1:00 - 2:20pm</td>
     </tr>
     <tr>
         <td>Dates:</td>
-        <td>March 29 - June 4, 2020</td>
+        <td>March 29 - June 4, 2021</td>
     </tr>
     <tr>
         <td>Instructor:</td><td><a href="https://comm.stanford.edu/faculty-tumgoren/">Serdar Tumgoren</a>, <em>Lorry I. Lokey Visiting Professor in Professional Journalism</em></td>
@@ -30,7 +30,7 @@
     </tr>
     </tr>
         <td>Place:</td>
-        <td>Zoom video conference</td>
+        <td>Zoom video conference (see Canvas syllabus page for link)</td>
     </tr>
 </table>
 <p>I'm happy to meet during or outside of normally scheduled office hours. 
