--- a/src/bna/2021/index.njk
+++ b/src/bna/2021/index.njk
@@ -70,7 +70,7 @@ title: Syllabus
     <p>We'll primarily use Zoom and Slack to communicate this quarter. Please make sure to install
     the desktop clients for both applications by clicking on their links below and following the instructions.</p>
     <ul>
-      <li><a href="https://uit.stanford.edu/service/slack#section--get-started">Slack</a> - Join the <em>comm-177t-bna</em> channel in the <a href="https://stanford-r8xo.slack.com/home">StanfordJournalism</a> workspace.
+      <li><a href="https://uit.stanford.edu/service/slack#section--get-started">Slack</a> - Join our class Slack workspace through the Slack link in Canvas</li>
       <li><a href="https://stanford.zoom.us/download">Zoom</a> - Links to class meetings will be posted in Canvas. Classes will be recorded and available for review.</li>
     </ul>
 
