--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -141,6 +141,15 @@ img {
   height: auto;
 }
 
+img[alt="Wonka"] {
+  width: 50%;
+  width: 450px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 @media screen and (max-width: 575px) {
   .grid-container {
     display: block;
