Add Topics section

--- a/src/_includes/layouts/base_bna.njk
+++ b/src/_includes/layouts/base_bna.njk
@@ -1,5 +1,5 @@
 ---
-homepage: "https://data-driven.news/bna/2019/"
+homepage: "https://data-driven.news/bna/2022/"
 ---
 {% extends "layouts/base.njk" %}
 
@@ -12,7 +12,8 @@ homepage: "https://data-driven.news/bna/2019/"
   <ul>
     <li><a href="/bna/{{ year }}/">Syllabus</a></li>
     <li><a href="/bna/{{ year }}/classnotes/">Class notes</a></li>
-    <li><!-- TODO: add index pages
+    <li><a href="/bna/{{ year }}/topics/">Topics</a></li>
+    <!-- TODO: add index pages
     <li><a href="/bna/{{ year }}/assignments/">Assignments</a></li>
     -->
   </ul>
