Add setup guide and AI policy

--- a/src/bna/2024/index.njk
+++ b/src/bna/2024/index.njk
@@ -73,5 +73,6 @@ title: Syllabus
 
     {% include "bna/" + year + "/about.njk" %}
     {% include "bna/" + year + "/professional-disclosure.njk" %}
+    {% include "bna/" + year + "/ai-policy.html" %}
     {% include "bna/" + year + "/honor-code.html" %}
 {% endblock %}
