Update class times and office hours

--- a/src/_includes/bna/2024/about.njk
+++ b/src/_includes/bna/2024/about.njk
@@ -2,15 +2,15 @@
 <table>
     <tr>
         <td>Location:</td>
-        <td>Lathrop 294</td>
+        <td><a href="https://campus-map.stanford.edu/?srch=120-S40">McClatchy Hall Studio 40</a></td>
     </tr>
     <tr>
         <td>Time:</td>
-        <td>Mon/Wed 12:30 - 2:20pm</td>
+        <td>Mon/Wed 1:30 - 3:20pm</td>
     </tr>
     <tr>
         <td>Dates:</td>
-        <td>April 3 - June 7, 2023</td>
+        <td>January 8 - March 15, 2024</td>
     </tr>
     <tr>
         <td>Instructor:</td><td><a href="https://comm.stanford.edu/faculty-tumgoren/">Serdar Tumgoren</a>, <em>Lorry I. Lokey Visiting Professor in Professional Journalism</em></td>
@@ -26,12 +26,12 @@
 <table>
     <tr>
         <td>Time:</td>
-        <td>Wednesdays, 9-10am and by appointment</td>
+        <td>Mon/Wed, 9-10am and by appointment</td>
     </tr>
     </tr>
         <td>Place:</td>
         <td>McClatchy Room 342 or Zoom video conference (see Canvas syllabus page for link)</td>
     </tr>
 </table>
-<p>I'm happy to meet during or outside of normally scheduled office hours. 
+<p>I'm happy to meet during or outside of normally scheduled office hours.
 Please send an email or reach out on Slack to schedule a time to meet.</p>
